fix Service Spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,6 +93,10 @@
         margin-top: -50px;
     }
     .edu-mt {
-        margin-top: 70px;
+        margin-top: 200px;
+    }
+
+    .title-mt {
+        margin-top: 50px;
     }
 }
